# om_lineage

./: main.py  pyproject.toml
app/: main.py
app/api/: routes.py
app/models/: lineageEdge.py  query.py  table.py
app/services/: addLineageEdgeService.py  lineageService.py  newfile.ipynb  tableDetails.py
